--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,14 @@
 {
-  "name": "ember-electron-barista",
+  "name": "ember-barista-ui",
   "dependencies": {
     "ember": "~2.3.1",
     "ember-cli-shims": "0.1.0",
     "ember-cli-test-loader": "0.2.2",
-    "ember-qunit-notifications": "0.1.0"
+    "ember-qunit-notifications": "0.1.0",
+    "hammer.js": "^2.0.8",
+    "matchMedia": "0.2.0",
+    "mocha": "~2.2.4",
+    "chai": "~2.3.0",
+    "ember-mocha-adapter": "~0.3.1"
   }
 }
