--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ember-electron-barista",
+  "name": "ember-barista-ui",
   "version": "0.0.0",
-  "description": "Small description for ember-electron-barista goes here",
+  "description": "Small description for ember-barista-ui goes here",
   "private": true,
   "directories": {
     "doc": "doc",
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember test"
+    "test": "ember test",
+    "lint": "eslint *.js addon app blueprints config tests --fix"
   },
   "repository": "",
   "engines": {
@@ -32,8 +33,9 @@
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.2.1",
+    "ember-cli-mocha": "0.10.4",
     "ember-cli-release": "0.2.8",
+    "ember-cli-sass": "5.3.1",
     "ember-cli-sri": "^2.0.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.3.0",
@@ -42,7 +44,10 @@
     "ember-export-application-global": "^1.0.4",
     "ember-inspector": "1.10.0",
     "ember-load-initializers": "^0.5.0",
+    "ember-paper": "1.0.0-alpha.3",
     "ember-resolver": "^2.0.3",
+    "eslint": "^3.1.1",
+    "eslint-config-frost-standard": "^3.0.0",
     "loader.js": "^4.0.0"
   },
   "main": "electron.js",
