--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-google-fonts": "2.3.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-mocha": "0.10.4",
     "ember-cli-release": "0.2.8",
-    "ember-cli-sass": "5.3.1",
+    "ember-cli-sass": "5.4.0",
     "ember-cli-sri": "^2.0.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.3.0",
@@ -44,7 +45,8 @@
     "ember-export-application-global": "^1.0.4",
     "ember-inspector": "1.10.0",
     "ember-load-initializers": "^0.5.0",
-    "ember-paper": "1.0.0-alpha.3",
+    "ember-material-design-icons-shim": "0.1.9",
+    "ember-materialize-shim": "0.3.0",
     "ember-resolver": "^2.0.3",
     "eslint": "^3.1.1",
     "eslint-config-frost-standard": "^3.0.0",
