--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ember-material-design-icons-shim": "0.1.9",
     "ember-materialize-shim": "0.3.0",
     "ember-resolver": "^2.0.3",
+    "ember-truth-helpers": "1.2.0",
     "eslint": "^3.1.1",
     "eslint-config-frost-standard": "^3.0.0",
     "loader.js": "^4.0.0"
