--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "mocha": "~2.2.4",
     "chai": "~2.3.0",
     "ember-mocha-adapter": "~0.3.1",
-    "materialize": "0.97.6"
+    "materialize": "0.97.6",
+    "perfect-scrollbar": ">=0.6.7 <2.0.0"
   }
 }
