--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "electron-prebuilt": "1.3.1",
     "electron-rebuild": "1.1.5",
     "ember-ajax": "0.7.1",
+    "ember-browserify": "1.1.11",
     "ember-cli": "2.3.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
@@ -39,19 +40,30 @@
     "ember-cli-sass": "5.4.0",
     "ember-cli-sri": "^2.0.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-computed-decorators": "0.2.2",
+    "ember-concurrency": "0.7.8",
     "ember-data": "^2.3.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-electron": "1.8.0",
     "ember-export-application-global": "^1.0.4",
+    "ember-frost-core": "0.21.1",
+    "ember-hook": "1.2.1",
     "ember-inspector": "1.10.0",
     "ember-load-initializers": "^0.5.0",
+    "ember-lodash-shim": "0.1.2",
     "ember-material-design-icons-shim": "0.1.9",
     "ember-materialize-shim": "0.3.0",
+    "ember-one-way-controls": "1.0.0",
+    "ember-redux": "1.4.0",
     "ember-resolver": "^2.0.3",
     "ember-truth-helpers": "1.2.0",
     "eslint": "^3.1.1",
     "eslint-config-frost-standard": "^3.0.0",
-    "loader.js": "^4.0.0"
+    "loader.js": "^4.0.0",
+    "lodash-es": "4.14.1",
+    "redux": "3.5.2",
+    "redux-thunk": "2.1.0",
+    "svg4everybody": "2.1.0"
   },
   "main": "electron.js",
   "ember-electron": {
