--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "chai": "~2.3.0",
     "ember-mocha-adapter": "~0.3.1",
     "materialize": "0.97.6",
-    "perfect-scrollbar": ">=0.6.7 <2.0.0"
+    "perfect-scrollbar": ">=0.6.7 <2.0.0",
+    "tribute": "^2.0.5"
   }
 }
