--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "ember-mocha-adapter": "~0.3.1",
     "materialize": "0.97.6",
     "perfect-scrollbar": ">=0.6.7 <2.0.0",
-    "tribute": "^2.0.5"
+    "tribute": "^2.0.5",
+    "pretender": "~1.1.0",
+    "Faker": "~3.1.0"
   }
 }
