--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-mirage": "0.2.1",
     "ember-cli-mocha": "0.10.4",
     "ember-cli-release": "0.2.8",
     "ember-cli-sass": "5.4.0",
@@ -42,6 +43,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-computed-decorators": "0.2.2",
     "ember-concurrency": "0.7.8",
+    "ember-content-editable": "0.9.0",
     "ember-data": "^2.3.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-electron": "1.8.0",
