--- a/package.json
+++ b/package.json
@@ -66,7 +66,11 @@
     "lodash-es": "4.14.1",
     "redux": "3.5.2",
     "redux-thunk": "2.1.0",
-    "svg4everybody": "2.1.0"
+    "svg4everybody": "2.1.0",
+    "chalk": "^1.1.3",
+    "handlebars": "^4.0.5",
+    "js-yaml": "^3.6.1",
+    "string": "^3.3.1"
   },
   "main": "electron.js",
   "ember-electron": {
