--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     }
   },
   "dependencies": {
-    "ember-cli-materialize": "^0.22.0-beta.0"
+    "ember-cli-materialize": "^0.22.0-beta.0",
+    "js-beautify": "^1.6.3"
   }
 }
