--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "electron-rebuild": "1.1.5",
     "ember-ajax": "0.7.1",
     "ember-browserify": "1.1.11",
-    "ember-cli": "2.3.0",
+    "ember-cli": "^2.3.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
     "ember-cli-dependency-checker": "^1.2.0",
@@ -55,7 +55,7 @@
     "ember-load-initializers": "^0.5.0",
     "ember-lodash-shim": "0.1.2",
     "ember-material-design-icons-shim": "0.1.9",
-    "ember-materialize-shim": "0.3.0",
+    "ember-materialize-shim": "git://github.com/levanto-financial/ember-materialize-shim.git#bd11c52b946a6c6a7345941ae6783ed54b0a1425",
     "ember-one-way-controls": "1.0.0",
     "ember-redux": "1.4.0",
     "ember-resolver": "^2.0.3",
