--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
 - sh -e /etc/init.d/xvfb start
 - sleep 3
 before_install:
-- go install github-release
+- go get github.com/aktau/github-release
 install:
 - npm install
 - bower install
