--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ before_script:
 - sh -e /etc/init.d/xvfb start
 - sleep 3
 before_install:
-- go get github.com/aktau/github-release
+  - export GOPATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace:$GOPATH"
+  - export PATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace/bin:$PATH"
+  - go get github.com/aktau/github-release
 install:
 - npm install
 - bower install
