--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - export GOPATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace:$GOPATH"
   - export PATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace/bin:$PATH"
   - go get github.com/aktau/github-release
+  - npm install -g codeclimate-test-reporter
 install:
 - npm install
 - bower install
@@ -21,6 +22,7 @@ after_success:
 - for i in electron-builds/*/; do zip -r "${i%/}.zip" "$i"; done;
 - github-release release --user ciena-blueplanet --repo ember-barista-ui --tag v$(node -p -e "require('./package.json').version") --name $(node -p -e "require('./package.json').version") --description "Built by Travis CI" --pre-release
 - github-release upload --user ciena-blueplanet --repo ember-barista-ui  --tag v$(node -p -e "require('./package.json').version") --name "ember-barista-ui-darwin-x64.zip" --file "electron-builds/ember-barista-ui-darwin-x64.zip"
+- codeclimate-test-reporter < lcov.info
 addons:
   apt:
     sources:
