--- a/bower.json
+++ b/bower.json
@@ -15,5 +15,8 @@
     "tribute": "^2.0.5",
     "pretender": "~1.1.0",
     "Faker": "~3.1.0"
+  },
+  "devDependencies": {
+    "blanket": "5e94fc30f2e694bb5c3718ddcbf60d467f4b4d26"
   }
 }
