--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember test",
+    "test": "ember test --test-page='tests/index.html?coverage=true'",
     "lint": "eslint *.js addon app blueprints config tests --fix",
     "compile": "ember electron:package --platform=darwin --arch=x64 --overwrite"
   },
@@ -34,12 +34,12 @@
     "ember-cli": "^2.3.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
+    "ember-cli-blanket": "0.9.8",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-google-fonts": "2.3.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-mirage": "0.2.1",
     "ember-cli-mocha": "0.10.4",
     "ember-cli-release": "0.2.8",
     "ember-cli-sass": "5.4.0",
