--- a/bower.json
+++ b/bower.json
@@ -7,14 +7,14 @@
     "ember-qunit-notifications": "0.1.0",
     "hammer.js": "^2.0.8",
     "matchMedia": "0.2.0",
-    "mocha": "~2.2.4",
     "chai": "~2.3.0",
-    "ember-mocha-adapter": "~0.3.1",
     "materialize": "0.97.7",
     "perfect-scrollbar": ">=0.6.7 <2.0.0",
     "tribute": "^2.0.5",
     "pretender": "~1.1.0",
-    "Faker": "~3.1.0"
+    "Faker": "~3.1.0",
+    "mocha": "~2.2.4",
+    "ember-mocha-adapter": "~0.3.1"
   },
   "devDependencies": {
     "blanket": "5e94fc30f2e694bb5c3718ddcbf60d467f4b4d26"
