--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-mocha": "0.10.4",
+    "ember-cli-page-object": "1.5.0",
     "ember-cli-release": "0.2.8",
     "ember-cli-sass": "5.4.0",
     "ember-cli-sri": "^2.0.0",
+    "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-computed-decorators": "0.2.2",
     "ember-concurrency": "0.7.8",
